--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>solelianus - THE ORANGE Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Portfolio</h1>
-    </header>
     <main>
+        <h1>THE ORANGE</h1>
         <section id="about">
             <h2>About Me</h2>
             <p>This is where you can write a brief description about yourself.</p>
@@ -27,7 +25,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 solelianus</p>
     </footer>
     <script src="script.js"></script>
 </body>
